tests/baselines/reference/trailingCommaInHeterogenousArrayLiteral1.errors.txt
==== tests/cases/compiler/trailingCommaInHeterogenousArrayLiteral1.ts (2 errors) ====
    class arrTest {
        test(arg1: number[]) {    }
        callTest() {
            // these two should give the same error
            this.test([1, 2, "hi", 5, ]);
                      ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{}[]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   Type '{}' is not assignable to type 'number'.
            this.test([1, 2, "hi", 5]); 
                      ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{}[]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   Type '{}' is not assignable to type 'number'.
        }
    }
    